Fri Jun 12 21:20:42 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtkoptionmenu.c (gtk_option_menu_expose): Removed
	code for drawing the child in two places at once. Unfortunately,
	not only does it not work anymore (because reparenting has
	been fixed), but it also triggers reparent/expose loops
	in some cases.

	* gtk/gtkoptionmenu.c (gtk_option_menu_remove_contents): Removed
	an unecessary unrealize.

Thu Jun 11 13:09:00 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtktext.c (remove_cache_line): Fixed broken
	list-removal code.

Wed Jun 10 00:15:58 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtknotebook.h (struct _GtkNotebookClass):
	* gtk/gtknotebook.c (gtk_real_notebook_switch_page): 
	Added missing argument (according to Joseph Coleman's bug report)

Thu Jun  4 12:12:11 BST 1998  Tony Gale  <gale@gtk.org>

        * examples/extract.sh, examples/extract.awk:
          New files to automagically extract code examples from the
          tutorial.

Tue Jun  2 13:04:06 BST 1998  Tony Gale  <gale@gtk.org>

        * docs/gtk_tut.sgml: minor changes to support auto
          extraction of example code

Mon Jun  1 22:14:33 CDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.0.4

Mon Jun  1 20:24:42 PDT 1998  Jay Painter <jpaint@serv.net>
	* gtk/gtkclist.c: fixed clipping for pixmaps within rows...
	finally.

Mon Jun  1 12:47:56 BST 1998  Tony Gale  <gale@gtk.org>
        [1-1-0-Merge]
 
        * docs/gtk_tut_it.sgml: Update of Italian Tutorial
          to Tutorial of 24th May, from Daniele Canazza <dcanazz@tin.it>

Fri May 29 13:53:57 BST 1998  Tony Gale  <gale@gtk.org>
        [1-1-0-Merge]
 
        * docs/gtk_tut.sgml:
          - new section on Events
          - change all delete_event callbacks to include
            a GdkEvent parameter
          - clean up the formatting

        * examples - helloworld.c, helloworld2.c, notebook.c,
          packbox.c, pixmap.c, progressbar.c, radiobuttons.c,